Add link to sorting algorithms in slide02.html

--- a/slide02.html
+++ b/slide02.html
@@ -97,7 +97,8 @@
                     </div>
                     <div class="mt-4 text-center">
                         <span class="text-blue-600 text-sm">
-                            <i class="fas fa-hand-pointer mr-1"></i>
+                            <i class="fas fa-hand-pointer mr-1" href="/sorting-algorithms.html
+"></i>
                             点击查看详细内容
                         </span>
                     </div>
