Change link from href to onclick for sorting page

--- a/slide02.html
+++ b/slide02.html
@@ -97,8 +97,7 @@
                     </div>
                     <div class="mt-4 text-center">
                         <span class="text-blue-600 text-sm">
-                            <i class="fas fa-hand-pointer mr-1" href="/sorting-algorithms.html
-"></i>
+                            <i class="fas fa-hand-pointer mr-1" onclick="window.location.href='sorting-algorithms.html'"></i>
                             点击查看详细内容
                         </span>
                     </div>
