--- a/slide02.html
+++ b/slide02.html
@@ -95,9 +95,9 @@
                             <span class="text-yellow-600 text-sm">★★★☆☆</span>
                         </div>
                     </div>
-                    <div class="mt-4 text-center">
+                    <div class="mt-4 text-center" onclick="window.location.href='sorting-algorithms.html'">
                         <span class="text-blue-600 text-sm">
-                            <i class="fas fa-hand-pointer mr-1" onclick="window.location.href='sorting-algorithms.html'"></i>
+                            <i class="fas fa-hand-pointer mr-1" ></i>
                             点击查看详细内容
                         </span>
                     </div>
