--- a/slide02.html
+++ b/slide02.html
@@ -95,7 +95,7 @@
                             <span class="text-yellow-600 text-sm">★★★☆☆</span>
                         </div>
                     </div>
-                    <div class="mt-4 text-center" onclick="window.location.href='sorting-algorithms.html'">
+                    <div class="mt-4 text-center" onclick="window.location.href='python-sorting-algorithm.html'">
                         <span class="text-blue-600 text-sm">
                             <i class="fas fa-hand-pointer mr-1" ></i>
                             点击查看详细内容
